; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavdevice/extr_pulse_audio_common.c_ff_pulse_audio_disconnect_context.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavdevice/extr_pulse_audio_common.c_ff_pulse_audio_disconnect_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_pulse_audio_disconnect_context(i32** %0, i32** %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca i32**, align 8
  store i32** %0, i32*** %3, align 8
  store i32** %1, i32*** %4, align 8
  %5 = load i32**, i32*** %3, align 8
  %6 = call i32 @av_assert0(i32** %5)
  %7 = load i32**, i32*** %4, align 8
  %8 = call i32 @av_assert0(i32** %7)
  %9 = load i32**, i32*** %4, align 8
  %10 = load i32*, i32** %9, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %22

12:                                               ; preds = %2
  %13 = load i32**, i32*** %4, align 8
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @pa_context_set_state_callback(i32* %14, i32* null, i32* null)
  %16 = load i32**, i32*** %4, align 8
  %17 = load i32*, i32** %16, align 8
  %18 = call i32 @pa_context_disconnect(i32* %17)
  %19 = load i32**, i32*** %4, align 8
  %20 = load i32*, i32** %19, align 8
  %21 = call i32 @pa_context_unref(i32* %20)
  br label %22

22:                                               ; preds = %12, %2
  %23 = load i32**, i32*** %3, align 8
  %24 = load i32*, i32** %23, align 8
  %25 = icmp ne i32* %24, null
  br i1 %25, label %26, label %30

26:                                               ; preds = %22
  %27 = load i32**, i32*** %3, align 8
  %28 = load i32*, i32** %27, align 8
  %29 = call i32 @pa_mainloop_free(i32* %28)
  br label %30

30:                                               ; preds = %26, %22
  %31 = load i32**, i32*** %3, align 8
  store i32* null, i32** %31, align 8
  %32 = load i32**, i32*** %4, align 8
  store i32* null, i32** %32, align 8
  ret void
}

declare dso_local i32 @av_assert0(i32**) #1

declare dso_local i32 @pa_context_set_state_callback(i32*, i32*, i32*) #1

declare dso_local i32 @pa_context_disconnect(i32*) #1

declare dso_local i32 @pa_context_unref(i32*) #1

declare dso_local i32 @pa_mainloop_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
